package rice;
option java_package = "com.convert.rice.protocol";
option java_multiple_files = true;

enum Aggregation {
	SECOND = 1;
	MINUTE = 2;
	HOUR   = 3;
	DAY    = 4;
	MONTH  = 5;
}

message Point {
	required int64 timestamp = 1;
	required int64 value = 2;
}

message Request {
	message Increment {
		message Metric {
			required string key = 1;
			required uint64 value = 2;
		}

		required string type = 1;
		required string key = 2;
		repeated Metric metrics = 3;
		optional int64 timestamp = 4;
	}

	message Get {
		required string type = 1;
		required string key = 2;
		required int64 start = 3;
		required int64 end = 4;
		optional Aggregation aggregation = 5 [default = HOUR];

	}

	message Create {
		required string type = 1;
	}

	//One of these will be filled in.
	repeated Increment inc = 1;
	repeated Get get = 2;
	repeated Create create = 3;
}

message Response {
	message Error {
		enum Status {
			TABLE_NOT_FOUND = 1;
			IO_EXCEPTION = 2;
		}
		optional string message = 1;
		optional Status status = 2;
	}
	message IncResult {
		required string type = 1;
		required string key = 2;
		required int64 timestamp = 3;

		optional Error error = 100;
	}

	message GetResult {
		message Metric {
			required string name = 1;
			repeated Point points = 2;
		}

		required string type = 1;
		required string key = 2;
		repeated Metric metrics = 3;

		optional Error error = 100;

	}

	message CreateResult {
		required string type = 1;

		optional Error error = 100;
	}

	repeated IncResult inc_result = 1;
	repeated GetResult get_result = 2;
	repeated CreateResult create_result = 3;

}
